Criação do User no core da aplicação

--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -1,1 +1,23 @@
-spring.application.name=users
+spring.application.name=ms-users
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.kafka.bootstrap-servers=localhost:9092
+
+#configuracoes do eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+#configuracoes do redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=admin
+spring.data.redis.timeout=2000
+spring.data.redis.database=0
