--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.data.redis.port=6379
 spring.data.redis.password=admin
 spring.data.redis.timeout=2000
 spring.data.redis.database=0
+
+#configs sqs (configs padroes para rodar no localstack)
+vitorvhsilva.localstack.url=http://localhost:4566
+vitorvhsilva.aws.sqs.queue.url=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/create-post-queue
